@@ -2,7 +2,8 @@
 -----
 
 - Added touchscreen movement options (3x3 grid or travel, plus long press options).
-- Improved context sensitivity when clicking the trackball.
+- Improved context sensitivity when using trackball, for picking up stuff,
+  opening/kick doors, etc.
 - 'number_pad' option works better, allowing use of the trackball.
 
 1.3.1 (July 31, 2010)
